Don't know why I've thought it called "DML" this whole time, fixed that
Tiny formatting bug that was annoying me squashed

--- a/src/main.css
+++ b/src/main.css
@@ -158,7 +158,7 @@ div.collapse-target {
     position: relative;
 
     margin: 10px;
-    padding-bottom: 15px;
+    /*padding-bottom: 15px;*/
 
     -moz-border-radius-bottomleft: 10px;
     -moz-border-radius-bottomright: 10px;
